Crop text on mobile, implement button which opens modal with the milestone content

--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/main';
-@import '../../../styles/common/colors';
+@import '../../../pages/style.scss';
+// @import '../../../index-page/shared-styles';
 
 $offsetTop: 300px;
 $offsetTopMobile: 200px;
@@ -260,6 +261,26 @@ $offsetTopMobile: 200px;
       color: $c_panel_content;
       text-align: left;
     }
+
+    &__button {
+      @include t100;
+
+      width: 100%;
+      height: 32px;
+      margin-top: 24px;
+      padding: 8px 12px;
+      font-weight: 500;
+      color: #7b8a95;
+      cursor: pointer;
+      background-color: rgba(242, 245, 249, 1);
+      border: 1px solid rgba(222, 227, 233, 1);
+      border-radius: 2px;
+
+      &:hover {
+        background-color: rgba(242, 245, 249, .8);
+        border: 1px solid rgba(222, 227, 233, .8);
+      }
+    }
   }
 
   &__underline {
@@ -372,7 +393,6 @@ $offsetTopMobile: 200px;
       background-color: #4038ff26;
     }
   }
-
   @media (max-width: 1200px) {
     width: 818px;
     grid-template-columns: 132px 656px;
@@ -509,6 +529,76 @@ $offsetTopMobile: 200px;
     &__panel {
       width: auto;
     }
+  }
+}
+
+.ReactModal__Content {
+  opacity: 0;
+  transform: translateY(100%);
+  transition: all 350ms ease-in-out;
+}
+
+.ReactModal__Content--after-open {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.ReactModal__Content--before-close {
+  opacity: 0;
+  transform: translateY(100%);
+}
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: all 350ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+.QuarterPanel__modal {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  background-color: $c_white;
+
+  &__overlay {
+    position: fixed;
+    background-color: rgba(16, 18, 20, .75);
+    inset: 0;
+  }
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    padding: 24px 24px 0 24px;
+    gap: 40px;
+
+    &__title {
+      @include h500;
+    }
+
+    &__close {
+      width: 12px;
+      height: 12px;
+      min-width: 12px;
+      min-height: 12px;
+      margin-top: 12px;
+      cursor: pointer;
+    }
+  }
+
+  &__content {
+    @include base-3;
+
+    padding: 24px;
+    color: #5c6475;
   }
 }
 
