Add minimum height to banner component, change useEffect to useLayoutEffect

--- a/src/components/OneKeyBanner/style.scss
+++ b/src/components/OneKeyBanner/style.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: space-between;
   height: 88px;
+  min-height: 88px;
   padding: 16px 32px;
   overflow: hidden;
   background-color: #0f1114;
