Update learn more link, update position of background in 1024px breakpoint

--- a/src/components/TangemBanner/style.scss
+++ b/src/components/TangemBanner/style.scss
@@ -101,7 +101,8 @@
     }
 
     &__background {
-      top: 86px;
+      top: 90px;
+      left: 235px;
     }
   }
 
@@ -125,18 +126,6 @@
 
         font-weight: 600;
       }
-    }
-
-    &__background {
-      // top: 140px;
-      // left: unset;
-      // right: -143px;
-
-      // width: 357px;
-      // left: 400px;
-      // right: 0;
-
-      // width: 270px;
     }
   }
 
