--- a/src/components/token-page/InstantSwap/style.scss
+++ b/src/components/token-page/InstantSwap/style.scss
@@ -3,7 +3,7 @@
 
 .TokenPage {
   &__instant-swap-wrapper {
-    padding: 96px 0;
+    padding: 0 0 96px 0;
     background-color: #000;
   }
 
@@ -101,7 +101,7 @@
 
   @media #{$screen-max-sm} {
     &__instant-swap-wrapper {
-      padding: 80px 0;
+      padding: 0 0 80px 0;
     }
 
     &__instant-swap {
