--- a/src/components/token-page/Uniswap/style.scss
+++ b/src/components/token-page/Uniswap/style.scss
@@ -3,7 +3,7 @@
 
 .TokenPage {
   &__uniswap-wrapper {
-    padding: 0 0 96px 0;
+    padding: 96px 0;
     background-color: #000;
   }
 
@@ -140,7 +140,7 @@
 
   @media #{$screen-max-sm} {
     &__uniswap-wrapper {
-      padding: 0 0 80px 0;
+      padding: 80px 0;
     }
 
     &__uniswap {
